--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- ImageView para mostrar a imagem filtrada -->
     <ImageView
         android:id="@+id/filteredImageView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="centerCrop" />
 
-    <!-- SeekBar para ajuste de brilho -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +34,6 @@
         android:textSize="18sp"
         android:layout_marginTop="16dp" />
 
-
     <SeekBar
         android:id="@+id/contrastSeekBar"
         android:layout_width="match_parent"
@@ -55,33 +52,6 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp">
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iconSavePhoto"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:contentDescription="Save Photo"
-                android:src="@drawable/save_image"
-                app:tint="@color/primaryColor" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Save Photo"
-                android:textSize="12sp" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -108,49 +78,78 @@
                 android:text="My Filters"
                 android:textSize="12sp" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iconSavePhoto"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:contentDescription="Save Photo"
+                android:src="@drawable/save_image"
+                app:tint="@color/primaryColor" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="Save Photo"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:padding="8dp">
 
     <LinearLayout
         android:id="@+id/filterButtonsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="8dp"
+        android:gravity="center"
         android:visibility="gone">
+
 
         <Button
             android:id="@+id/btnFilterGrayScale"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
+            android:layout_width="110dp"
+            android:layout_height="80dp"
             android:text="Gray" />
 
         <Button
             android:id="@+id/btnFilterSepia"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
+            android:layout_width="110dp"
+            android:layout_height="80dp"
             android:backgroundTint="#4CAF50"
             android:text="Sepia" />
 
         <Button
             android:id="@+id/btnFilterNegative"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
+            android:layout_width="110dp"
+            android:layout_height="80dp"
+            android:layout_margin="8dp"
             android:backgroundTint="#FFC107"
             android:text="Negative" />
 
-
         <Button
             android:id="@+id/btnFilterOriginal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="250dp"
+            android:layout_width="110dp"
+            android:layout_height="80dp"
             android:backgroundTint="#FF5722"
             android:text="Original" />
 
-
-
     </LinearLayout>
+    </HorizontalScrollView>
 </LinearLayout>
